# dotfiles

./: .envrc  .gitignore  .gitmodules  .mailmap  Dockerfile  LICENSE  README.md  dfc_config.yaml  docker-compose.yml  example.zsh.local.sh  install_nix.sh  pyproject.toml  requirements.txt
dfc_config/: __init__.py  aliases.py  commands.py  common.py  functions.py
docker_prereqs/: install_system.sh  install_user.sh  py-requirements.txt  system-requirements.txt
docs/: useful_commands.md
editors/pycharm/: ideavimrc
git/: gitconfig  gitignore_global
installers/: install_docker.zsh
misc/: jq_mod.jq  ssh_sample_config
misc/locals/: .gitconfig.local  .zsh.local
obsolete,legacy/: aliases
obsolete,legacy/direnv_obsolete/: dfc_config.yaml  envrc
obsolete,legacy/direnv_obsolete/direnv/: aliases_config  functions_config
pgcli/: config
players/mpsyt/: requirements.txt  start.zsh
shell/bash/: bash_profile  bashrc
shell/generic/: aliases  p10k.zsh
shell/zsh/: functions.zsh  global_env.zsh  lib.zsh  zinit_config.zsh  zplugrc  zprofile  zshrc
shell/zsh/lib/: aliases.zsh  functions.zsh
terminals/terminator/: config
tmux/: tmux.conf  tmuxline-snapshot
utils/: run_in_env.sh
utils/cd_tool/: __main__.py
utils/installer/: install.py  settings.json
utils/installer/data/: settings.json
utils/installer/libs/: __init__.py  apt_wrapper.py  utils.py
utils/installer/tools/: install_apps.py  install_repos.py  setup_files.py
vim/: vimrc
vim/spacevim_config/: init.toml
vim/spacevim_config/autoload/: my_spacevim.vim
wm/i3/: config  i3status.conf
(+11 files in other folders)
