[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["xyder <xydr2311@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
df-cli = { git = "https://gitlab.com/xyder/df-cli.git", branch = "master" }
# df-cli = { path = "../user_data/projects/df-cli", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
